--- a/Hospital Management System/App.xaml
+++ b/Hospital Management System/App.xaml
@@ -2,8 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Hospital_Management_System"
-             StartupUri="MainWindow.xaml">
+             StartupUri="LoginPage.xaml" >
     <Application.Resources>
-         
+       
     </Application.Resources>
 </Application>
