--- a/Hospital Management System/DoctorPage.xaml
+++ b/Hospital Management System/DoctorPage.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Hospital_Management_System.DoctorPage"
+﻿<Page x:Class="Hospital_Management_System.DoctorPage"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:Hospital_Management_System"
         mc:Ignorable="d"
         Title="DoctorPage" Height="450" Width="800">
-    <Grid>
+    <Grid Background="#FFFFFF">
         
     </Grid>
-</Window>
+    </Page>
