--- a/Hospital Management System/LoginPage.xaml
+++ b/Hospital Management System/LoginPage.xaml
@@ -5,8 +5,32 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Hospital_Management_System"
         mc:Ignorable="d"
-        Title="LoginPage" Height="450" Width="800">
-    <Grid>
-        
+        Title="LoginPage" Height="450" Width="800" WindowStartupLocation="CenterScreen">
+    <Grid Margin="20">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <TextBlock Text="HOSPITAL MANAGEMENT SYSTEM"
+                   FontSize="18" FontWeight="Bold" TextAlignment="Center" Margin="0,10,0,20"/>
+
+        <StackPanel Grid.Row="1" VerticalAlignment="Center" Height="274">
+            <Label Content="Username:" Width="200"/>
+            <TextBox x:Name="txtUsername" Margin="0,0,0,10" Width="200"/>
+
+            <Label Content="Password:" Width="200"/>
+            <PasswordBox x:Name="txtPassword" Margin="0,0,0,10" Width="200"/>
+
+            <Label Content="Role:" Width="200"/>
+            <ComboBox x:Name="cbRole" Margin="0,0,0,20" Width="200">
+                <ComboBoxItem Content="Admin"/>
+                <ComboBoxItem Content="Doctor"/>
+                <ComboBoxItem Content="Receptionist"/>
+                <ComboBoxItem Content="Accountant"/>
+            </ComboBox>
+
+            <Button Content="Login" Width="100" HorizontalAlignment="Center"  Click="Login_Click" />
+        </StackPanel>
     </Grid>
 </Window>
