--- a/Hospital Management System/MainWindow.xaml
+++ b/Hospital Management System/MainWindow.xaml
@@ -1,12 +1,24 @@
 ﻿<Window x:Class="Hospital_Management_System.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Hospital_Management_System"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="Hospital Management" Height="713" Width="1127">
 
+    <Grid>
+        <DockPanel>
+            <!-- Thanh menu bên trái -->
+            <StackPanel DockPanel.Dock="Left" Background="#2E4053" Width="180">
+                <TextBlock Text="HOSPITAL MANAGEMENT" Foreground="White" FontSize="13"
+                           FontWeight="Bold" HorizontalAlignment="Center" Margin="0,20,0,20"/>
+                <Button x:Name="BtnPatients" Content="Patients" Margin="10" Click="BtnPatients_Click"/>
+                <Button x:Name="BtnDoctors" Content="Doctors" Margin="10" Click="BtnDoctors_Click"/>
+                <Button x:Name="BtnAppointments" Content="Appointments" Margin="10" Click="BtnAppointments_Click"/>
+                <Button x:Name="BtnBilling" Content="Billing" Margin="10" Click="BtnBilling_Click"/>
+                <Button x:Name="BtnLogout" Content="Logout" Margin="10" Click="BtnLogout_Click"/>
+
+            </StackPanel>
+
+            <!-- Khu hiển thị Page -->
+            <Frame x:Name="MainFrame" NavigationUIVisibility="Hidden"/>
+        </DockPanel>
     </Grid>
 </Window>
