--- a/Hospital Management System/AppointmentPage.xaml
+++ b/Hospital Management System/AppointmentPage.xaml
@@ -23,6 +23,7 @@
             </Grid.RowDefinitions>
             <TextBlock Grid.Row="0" FontSize="26" FontWeight="Bold" HorizontalAlignment="Center" >APPOINTMENT MANAGEMENT</TextBlock>
             <StackPanel Orientation="Horizontal" Grid.Row="1" Margin="0 10" HorizontalAlignment="Left" Width="Auto">
+                <Button Margin="5" Width="80" Click="Appointment_Service_Add">Add</Button>
                 <Button Margin="5" Width="80" Click="Appointment_Service_View">View Service</Button>
                 <Button Margin="5" Width="80" Click="Update_Click">Update</Button>
                 <TextBox x:Name="sSearch" Margin="10 5" Width="200" BorderThickness="2"/>
