--- a/Hospital Management System/AppointmentPage.xaml
+++ b/Hospital Management System/AppointmentPage.xaml
@@ -1,19 +1,16 @@
-﻿<Window x:Class="Hospital_Management_System.AppointmentPage"
+﻿<Page x:Class="Hospital_Management_System.AppointmentPage"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Hospital_Management_System"
         mc:Ignorable="d"
-        Title="AppointmentPage" Height="450" Width="800" WindowStartupLocation="CenterScreen" Loaded="Appointment_Loaded" WindowState="Maximized">
+        Title="AppointmentPage" Height="450" Width="800" Loaded="Appointment_Loaded">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="6.2*"/>
         </Grid.ColumnDefinitions>
-        <Grid Grid.Column="0">
-            <local:SideBarDoctor/>
-        </Grid>
         <Grid Margin="5" Grid.Column="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
@@ -61,4 +58,4 @@
             </Grid>
         </Grid>
     </Grid>
-</Window>
+</Page>
