--- a/Hospital Management System/AppointmentPage.xaml
+++ b/Hospital Management System/AppointmentPage.xaml
@@ -1,16 +1,19 @@
-﻿<Page x:Class="Hospital_Management_System.AppointmentPage"
+﻿<Window x:Class="Hospital_Management_System.AppointmentPage"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Hospital_Management_System"
         mc:Ignorable="d"
-        Title="AppointmentPage" Height="450" Width="800" Loaded="Appointment_Loaded">
+        Title="AppointmentPage" Height="450" Width="800" WindowStartupLocation="CenterScreen" Loaded="Appointment_Loaded" WindowState="Maximized">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="6.2*"/>
         </Grid.ColumnDefinitions>
+        <Grid Grid.Column="0">
+            <local:SideBarDoctor/>
+        </Grid>
         <Grid Margin="5" Grid.Column="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
@@ -20,7 +23,6 @@
             </Grid.RowDefinitions>
             <TextBlock Grid.Row="0" FontSize="26" FontWeight="Bold" HorizontalAlignment="Center" >APPOINTMENT MANAGEMENT</TextBlock>
             <StackPanel Orientation="Horizontal" Grid.Row="1" Margin="0 10" HorizontalAlignment="Left" Width="Auto">
-                <Button Margin="5" Width="80" Click="Appointment_Service_Add">Add</Button>
                 <Button Margin="5" Width="80" Click="Appointment_Service_View">View Service</Button>
                 <Button Margin="5" Width="80" Click="Update_Click">Update</Button>
                 <TextBox x:Name="sSearch" Margin="10 5" Width="200" BorderThickness="2"/>
@@ -58,4 +60,4 @@
             </Grid>
         </Grid>
     </Grid>
-</Page>
+</Window>
